<resources>
    <string name="app_name">ブクレン</string>
    <string name="rental">レンタル</string>
    <string name="addBook">追加</string>
    <string name="rentalBookMenu">本の貸し出し</string>
    <string name="addBookMenu">本の新規登録を行う</string>
    <string name="searchBook">検索</string>
    <string name="addBookBtn">登録</string>
    <string name="tvISBNCode">ISBNコードを入力</string>
    <string name="tvCaution">本の裏表紙のバーコード の内、9784\nから始まるコードを入力してください。</string>
    <string name="tv_insert">登録</string>
    <string name="tv_insert_book">この本を登録しますか。</string>
    <string name="tv_inserted">登録しました</string>
    <string name="tv_yes">OK</string>
    <string name="tv_rentaled">レンタルしました。</string>
    <string name="tv_return">返却しました。</string>
    <string name="book_rental">貸出中</string>
    <string name="addbook_cutomise">カスタマイズ登録</string>
    <string name="input_book_title">本のタイトルを入力</string>
    <string name="input_book_title_kana">タイトルのフリガナを入力</string>
    <string name="hurigaba">フリガナ</string>
    <string name="Error_BOOKTitle">本のタイトルを入力してください。</string>
    <string name="searchKeyword">検索キーワード</string>
    <string name="delete">削除</string>
    <string name="tv_deleted">削除しました。</string>
    <string name="tv_delete_book">本の削除</string>
</resources>